# agent-reliability-arena

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  leaderboard.yml  maxima-trend.yml  reliability-gate.yml
agent_reliability_arena/: __init__.py  __main__.py  core.py
cases/: drift_demo.json  maxima_foundation.json
docs/: account_takeover_case_study.md  audit_service_offer.md  case_study.md  checker.html  index.html  launch_case_study.md  leaderboard.json  live_maxima_import.md  maxima-trend.html  maxima-trend.json  portfolio_launch_plan.md  security.html  security_launch_copy.md  security_scanner_plan.md
examples/: drift_transcript_sample.jsonl  maxima_transcript_sample.jsonl
examples/github-actions/: reliability-gate.yml
quality_checks/: test_core.py  test_reusable_workflow.py
scripts/: build_leaderboard.py
